Definition_Files/Frontend_Nginx/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfrontend
  labels:
    app: myfrontend
spec:
  template:
    metadata:
      name: myfrontend
      labels:
        app: myfrontend
    spec:
      setHostnameAsFQDN: true
      containers:
      - name: myfrontend
        image: docker.io/rustybridge/myfrontend
        imagePullPolicy: Never
        ports:
        - containerPort: 80
          name: listen
  selector:
    matchLabels:
      app: myfrontend
  replicas: 2
