Definition_Files/Frontend_Nginx/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: myfrontend-svc
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
      app: myfrontend
