Definition_Files/Frontend_Nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myfrontend
spec:
  rules:
  - host: resume.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myfrontend-svc
            port: 
              number: 80
